<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">学霸</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="logout_tips">再次点击退出程序</string>
    
    <!-- 首页左菜单 -->
    <string name="ml_login">点击登录</string>
    <string name="ml_explain">个性签名</string>
    <string name="ml_stumenu_1">学生菜单1</string>
    <string name="ml_stumenu_2">学生菜单2</string>
    <string name="ml_stumenu_3">学生菜单3</string>
    <string name="ml_stumenu_4">学生菜单4</string>
    <string name="ml_stumenu_5">学生菜单5</string>
    
    <string name="ml_teamenu_1">教师菜单1</string>
    <string name="ml_teamenu_2">教师菜单2</string>
    <string name="ml_teamenu_3">教师菜单3</string>
    <string name="ml_teamenu_4">教师菜单4</string>
    <string name="ml_teamenu_5">教师菜单5</string>
    
    <!-- 教师详情 --> 
    <string name="ltd_title">教师详情</string>
    <string name="ltd_imgtips">0/0</string>
    <string name="ltd_collection">&#160;收藏</string>
    <string name="ltd_judge_score_text">评价分数：</string>
    <string name="ltd_judge_score">0.0</string>
    <string name="ltd_teachersaay_text">教师自述：</string>
    <string name="ltd_teachersaay">士大夫士大夫士大夫士大夫士大夫</string>
    <string name="ltd_more">&gt;</string>
    <string name="ltd_course">课程套餐</string>
    <string name="ici_audition">&#160;试听</string>
    <string name="ltd_record">教师履历</string>
    <string name="ltd_address">地址：暂无</string>
    <string name="ltd_judge">评&#160;论</string>
    <string name="ltd_showmore">查看更多</string>
    <string name="ltd_xb_auth">学霸认证</string>
    <string name="ltd_interest">你可能感兴趣</string>
</resources>
